Update ChatActivity.java
updated ChatActivity.java