@@ -1,24 +1,23 @@
 package com.example.smartschoolbusapp;
 
-import android.content.Intent;
 import android.os.Bundle;
 import android.text.TextUtils;
 import android.view.MenuItem;
 import android.widget.Button;
 import android.widget.EditText;
 import android.widget.Toast;
-import androidx.annotation.Nullable;
+
 import androidx.appcompat.app.AppCompatActivity;
 import androidx.appcompat.widget.Toolbar;
 import androidx.recyclerview.widget.LinearLayoutManager;
 import androidx.recyclerview.widget.RecyclerView;
+
 import com.google.firebase.auth.FirebaseAuth;
 import com.google.firebase.auth.FirebaseUser;
 import com.google.firebase.firestore.*;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+
+import java.text.SimpleDateFormat;
+import java.util.*;
 
 public class ChatActivity extends AppCompatActivity {
 
@@ -26,7 +25,7 @@ public class ChatActivity extends AppCompatActivity {
     private EditText messageInput;
     private Button sendButton;
     private ChatAdapter chatAdapter;
-    private List<ChatMessage> chatMessages;
+    private List<ChatItem> chatMessages;
 
     private FirebaseAuth auth;
     private FirebaseFirestore firestore;
@@ -65,7 +64,7 @@ public class ChatActivity extends AppCompatActivity {
         // Get receiverId and receiverName from Intent
         receiverId = getIntent().getStringExtra("receiverId");
         receiverName = getIntent().getStringExtra("receiverName");
-        getSupportActionBar().setTitle("Chat with " + receiverName); // Set the title to the receiver's name
+        getSupportActionBar().setTitle("Chat with " + receiverName);
 
         // Generate chat room ID
         chatRoomId = getChatRoomId(currentUserId, receiverId);
@@ -86,32 +85,24 @@ public class ChatActivity extends AppCompatActivity {
         sendButton.setOnClickListener(v -> sendMessage());
     }
 
-    // Create chat room if it doesn't exist
     private void createChatRoomIfNotExists() {
         firestore.collection("chatRooms").document(chatRoomId)
                 .get()
                 .addOnCompleteListener(task -> {
                     if (!task.isSuccessful() || !task.getResult().exists()) {
-                        // If the chat room doesn't exist, create a new one
                         Map<String, Object> chatRoomData = new HashMap<>();
-                        chatRoomData.put("users", List.of(currentUserId, receiverId));
+                        chatRoomData.put("users", Arrays.asList(currentUserId, receiverId));
                         chatRoomData.put("lastMessage", "");
                         chatRoomData.put("timestamp", System.currentTimeMillis());
 
                         firestore.collection("chatRooms").document(chatRoomId)
                                 .set(chatRoomData)
-                                .addOnSuccessListener(aVoid -> {
-                                    // Chat room successfully created
-                                    System.out.println("Chat room created");
-                                })
-                                .addOnFailureListener(e -> {
-                                    Toast.makeText(ChatActivity.this, "Error creating chat room", Toast.LENGTH_SHORT).show();
-                                });
+                                .addOnSuccessListener(aVoid -> System.out.println("Chat room created"))
+                                .addOnFailureListener(e -> Toast.makeText(ChatActivity.this, "Error creating chat room", Toast.LENGTH_SHORT).show());
                     }
                 });
     }
 
-    // Send message
     private void sendMessage() {
         String messageText = messageInput.getText().toString().trim();
         if (!TextUtils.isEmpty(messageText)) {
@@ -122,27 +113,68 @@ public class ChatActivity extends AppCompatActivity {
             message.put("receiverID", receiverId);
             message.put("message", messageText);
             message.put("timestamp", timestamp);
+            message.put("seen", false);
 
             firestore.collection("chatRooms").document(chatRoomId)
                     .collection("messages")
                     .add(message)
                     .addOnSuccessListener(documentReference -> {
-                        messageInput.setText("");  // Clear input field
-                        updateLastMessage(messageText, timestamp);  // Update chat room with last message
+                        messageInput.setText("");
+                        updateLastMessage(messageText, timestamp);
                     })
-                    .addOnFailureListener(e -> {
-                        Toast.makeText(ChatActivity.this, "Error sending message", Toast.LENGTH_SHORT).show();
-                    });
+                    .addOnFailureListener(e -> Toast.makeText(ChatActivity.this, "Error sending message", Toast.LENGTH_SHORT).show());
         }
     }
 
-    // Update last message in the chat room
-    private void updateLastMessage(String messageText, long timestamp) {
+    /* private void updateLastMessage(String messageText, long timestamp) {
         firestore.collection("chatRooms").document(chatRoomId)
                 .update("lastMessage", messageText, "timestamp", timestamp);
+    }*/
+    private void updateLastMessage(String messageText, long timestamp) {
+        firestore.collection("chatRooms").document(chatRoomId)
+                .update("lastMessage", messageText, "timestamp", timestamp)
+                .addOnFailureListener(e ->
+                        Toast.makeText(this, "Failed to update chat room", Toast.LENGTH_SHORT).show()
+                );
     }
 
-    // Listen for new messages
+
+//    private void listenForMessages() {
+//        firestore.collection("chatRooms").document(chatRoomId)
+//                .collection("messages")
+//                .orderBy("timestamp", Query.Direction.ASCENDING)
+//                .addSnapshotListener((snapshots, error) -> {
+//                    if (error != null) {
+//                        Toast.makeText(ChatActivity.this, "Error loading messages", Toast.LENGTH_SHORT).show();
+//                        return;
+//                    }
+//
+//                    List<ChatItem> items = new ArrayList<>();
+//                    String lastDate = "";
+//
+//                    if (snapshots != null) {
+//                        for (QueryDocumentSnapshot doc : snapshots) {
+//                            ChatMessage message = doc.toObject(ChatMessage.class);
+//                            String dateString = formatDateHeader(message.getTimestamp());
+//
+//                            if (!dateString.equals(lastDate)) {
+//                                items.add(new DateHeader(dateString));
+//                                lastDate = dateString;
+//                            }
+//
+//                            items.add(message);
+//                        }
+//                    }
+//
+//                    chatMessages.clear();
+//                    chatMessages.addAll(items);
+//                    chatAdapter.notifyDataSetChanged();
+//                    chatRecyclerView.scrollToPosition(chatMessages.size() - 1);
+//                });
+//
+//
+//    }
+
     private void listenForMessages() {
         firestore.collection("chatRooms").document(chatRoomId)
                 .collection("messages")
@@ -152,24 +184,63 @@ public class ChatActivity extends AppCompatActivity {
                         Toast.makeText(ChatActivity.this, "Error loading messages", Toast.LENGTH_SHORT).show();
                         return;
                     }
-                    chatMessages.clear();
+
+                    List<ChatItem> items = new ArrayList<>();
+                    String lastDate = "";
+
                     if (snapshots != null) {
                         for (QueryDocumentSnapshot doc : snapshots) {
                             ChatMessage message = doc.toObject(ChatMessage.class);
-                            chatMessages.add(message);
+                            String dateString = formatDateHeader(message.getTimestamp());
+
+                            // ✅ Add this block for marking message as seen
+                            if (!message.getSenderID().equals(currentUserId) && !message.isSeen()) {
+                                doc.getReference().update("seen", true);
+                            }
+
+                            if (!dateString.equals(lastDate)) {
+                                items.add(new DateHeader(dateString));
+                                lastDate = dateString;
+                            }
+
+                            items.add(message);
                         }
                     }
+
+                    chatMessages.clear();
+                    chatMessages.addAll(items);
                     chatAdapter.notifyDataSetChanged();
-                    chatRecyclerView.scrollToPosition(chatMessages.size() - 1);  // Scroll to latest message
+                    chatRecyclerView.scrollToPosition(chatMessages.size() - 1);
                 });
     }
 
-    // Generate a unique chat room ID
-    private String getChatRoomId(String senderId, String receiverId) {
-        return senderId.compareTo(receiverId) < 0 ? senderId + "" + receiverId : receiverId + "" + senderId;
+
+    private String formatDateHeader(long timestamp) {
+        Date date = new Date(timestamp);
+        SimpleDateFormat sdf = new SimpleDateFormat("MMM dd, yyyy", Locale.getDefault());
+
+        Calendar messageCal = Calendar.getInstance();
+        messageCal.setTime(date);
+
+        Calendar today = Calendar.getInstance();
+        if (messageCal.get(Calendar.YEAR) == today.get(Calendar.YEAR)
+                && messageCal.get(Calendar.DAY_OF_YEAR) == today.get(Calendar.DAY_OF_YEAR)) {
+            return "Today";
+        }
+
+        today.add(Calendar.DAY_OF_YEAR, -1);
+        if (messageCal.get(Calendar.YEAR) == today.get(Calendar.YEAR)
+                && messageCal.get(Calendar.DAY_OF_YEAR) == today.get(Calendar.DAY_OF_YEAR)) {
+            return "Yesterday";
+        }
+
+        return sdf.format(date);
     }
 
-    // Handle back button click
+    private String getChatRoomId(String senderId, String receiverId) {
+        return senderId.compareTo(receiverId) < 0 ? senderId + receiverId : receiverId + senderId;
+    }
+
     @Override
     public boolean onOptionsItemSelected(MenuItem item) {
         if (item.getItemId() == android.R.id.home) {
